BREAKING: merge dev branch from vacation into master branch