@@ -2,9 +2,7 @@ package de.tectoast.emolga.utils.draft;
 
 
 import de.tectoast.emolga.utils.Constants;
-import de.tectoast.emolga.utils.Google;
 import de.tectoast.emolga.utils.RequestBuilder;
-import de.tectoast.emolga.utils.RequestGetter;
 import de.tectoast.jsolf.JSONArray;
 import de.tectoast.jsolf.JSONObject;
 import net.dv8tion.jda.api.JDA;
@@ -15,7 +13,6 @@ import net.dv8tion.jda.api.entities.TextChannel;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.slf4j.MarkerFactory;
 
 import java.util.*;
 import java.util.concurrent.*;
@@ -29,7 +26,6 @@ public class Draft {
     public static final List<Draft> drafts = new ArrayList<>();
     private static final Logger logger = LoggerFactory.getLogger(Draft.class);
     private static final ScheduledExecutorService predictionGamesService = Executors.newScheduledThreadPool(1);
-    private static final Pattern TRIPLE_HASHTAG = Pattern.compile("###");
     public final Map<Long, List<DraftPokemon>> picks = new HashMap<>();
     public final Map<Integer, List<Long>> order = new HashMap<>();
     public final Map<Integer, List<Long>> originalOrder = new HashMap<>();
@@ -197,74 +193,76 @@ public class Draft {
         }, "CreateDraft " + name).start();
     }
 
-    public static void doMatchUps(String day) {
+    public static void doMatchUps(String gameday) {
         JSONObject nds = getEmolgaJSON().getJSONObject("drafts").getJSONObject("NDS");
-        String sid = nds.getString("sid");
-        RequestBuilder b = new RequestBuilder(sid);
-        String str = nds.getJSONObject("battleorder").getString(day);
         JSONObject teamnames = nds.getJSONObject("teamnames");
-        for (String s : str.split(";")) {
-            String[] split = s.split(":");
-            String t1 = teamnames.getString(split[0]);
-            String t2 = teamnames.getString(split[1]);
-            b.addSingle(t1 + "!Q15", "=IMPORTRANGE(\"https://docs.google.com/spreadsheets/d/" + sid + "/edit\"; \"" + t2 + "!B15:O29\")");
-            b.addSingle(t1 + "!Q13", "=CONCAT(\"VS. Spieler \"; '" + t2 + "'!O2)");
-            b.addSingle(t2 + "!Q15", "=IMPORTRANGE(\"https://docs.google.com/spreadsheets/d/" + sid + "/edit\"; \"" + t1 + "!B15:O29\")");
-            b.addSingle(t2 + "!Q13", "=CONCAT(\"VS. Spieler \"; '" + t1 + "'!O2)");
+        String battleorder = nds.getJSONObject("battleorder").getString(gameday);
+        RequestBuilder b = new RequestBuilder(nds.getString("sid"));
+        for (String battle : battleorder.split(";")) {
+            String[] users = battle.split(":");
+            for (int index = 0; index < 2; index++) {
+                String team = teamnames.getString(users[index]);
+                String oppo = teamnames.getString(users[1 - index]);
+                b.addSingle("%s!B18".formatted(team), "={'%s'!B16:AE16}".formatted(oppo));
+                b.addSingle("%s!B19".formatted(team), "={'%s'!B15:AE15}".formatted(oppo));
+                b.addSingle("%s!B21".formatted(team), "={'%s'!B14:AF14}".formatted(oppo));
+                b.addColumn("%s!A18".formatted(team), List.of(
+                        "='%s'!Y2".formatted(oppo),
+                        "='%s'!B2".formatted(oppo)
+                ));
+            }
         }
-        b.execute();
+        b
+                .withRunnable(() -> emolgajda.getTextChannelById(837425690844201000L).sendMessage(
+                        "Jo, kurzer Reminder, die Matchups des nächsten Spieltages sind im Doc, vergesst das Nominieren nicht :)\n<@&856205147754201108>"
+                ).queue())
+                .execute();
     }
 
     public static void doNDSNominate() {
+        doNDSNominate(false);
+    }
+
+    public static void doNDSNominate(boolean prevDay) {
         JSONObject nds = getEmolgaJSON().getJSONObject("drafts").getJSONObject("NDS");
         JSONObject nom = nds.getJSONObject("nominations");
+        JSONObject teamnames = nds.getJSONObject("teamnames");
+        List<String> table = nds.getStringList("table");
         int cday = nom.getInt("currentDay");
+        if (prevDay) cday--;
         JSONObject o = nom.getJSONObject(String.valueOf(cday));
         JSONObject picks = nds.getJSONObject("picks");
         String sid = nds.getString("sid");
-        RequestBuilder builder = new RequestBuilder(sid);
-        RequestGetter getter = new RequestGetter(sid);
-
-        List<List<List<Object>>> get = new LinkedList<>();
-        int temp = 0;
-        for (String s : picks.keySet()) {
-            logger.info(MarkerFactory.getMarker("important"), "{} {}", temp, s);
-            get.add(Google.get(sid, nds.getJSONObject("teamnames").getString(s) + "!B15:O29", true, false));
-            temp++;
-        }
-        int x = 0;
+        RequestBuilder b = new RequestBuilder(sid);
+        List<String> tiers = List.of("S", "A", "B");
         for (String u : picks.keySet()) {
             //String u = "297010892678234114";
             if (!o.has(u)) {
                 if (cday == 1) {
                     List<JSONObject> mons = picks.getJSONList(u);
-                    o.put(u, mons.stream().limit(11).map(obj -> obj.getString("name")).collect(Collectors.joining(";")) + "###" + mons.stream().skip(11).map(obj -> obj.getString("name")).collect(Collectors.joining(";")));
+                    Comparator<JSONObject> comp = Comparator.<JSONObject, Integer>comparing(pk -> tiers.indexOf(pk.getString("tier"))).thenComparing(pk -> pk.getString("name"));
+                    o.put(u, mons.stream().sorted(comp).limit(11).map(obj -> obj.getString("name"))
+                                     .collect(Collectors.joining(";")) + "###"
+                             + mons.stream().sorted(comp).skip(11).map(obj -> obj.getString("name")).collect(Collectors.joining(";")));
                 } else {
                     o.put(u, nom.getJSONObject(String.valueOf(cday - 1)).getString(u));
                 }
             }
             //logger.info("o.get(u) = " + o.get(u));
             String str = o.getString(u);
-            List<String> mons = Arrays.stream(TRIPLE_HASHTAG.split(str)).flatMap(s -> Arrays.stream(s.split(";"))).toList();
+            List<Object> mons = Arrays.stream(str.replace("###", ";").split(";")).collect(Collectors.toList());
             logger.info("mons = " + mons);
-            String range = nds.getJSONObject("teamnames").getString(u) + "!B15:O29";
             logger.info("u = " + u);
-            logger.info("range = " + range);
-            builder.addAll(range, get.get(x).stream().filter(n -> !n.get(2).equals("")).sorted(Comparator.comparing(n -> {
-                String s1 = (String) n.get(2);
-                logger.info("s1 = " + s1);
-                int ret = mons.indexOf(s1);
-                logger.info("ret = " + ret);
-                return ret;
-            })).collect(Collectors.toList()));
-            x++;
+            int index = table.indexOf(teamnames.getString(u));
+            b.addColumn("Data!F%d".formatted(index * 17 + 2), mons);
         }
-        builder.withRunnable(() -> emolgajda.getTextChannelById(837425690844201000L).sendMessage("""
+        b.withRunnable(() -> emolgajda.getTextChannelById(837425690844201000L).sendMessage("""
                 Jo ihr alten Zipfelklatscher! Eure jämmerlichen Versuche eine Liga zu gewinnen werden scheitern ihr Arschgeigen, da ihr zu inkompetent seid euch zu merken, wann alles nach meiner Schwerstarbeit automatisch eingetragen wird. Daher erinnere ich euer Erbsenhirn mithilfe dieser noch nett formulierten Nachricht daran, dass ihr nun anfangen könnt zu builden. Dann bis nächste Woche Mittwoch!
                 PS: Bannt Henny, der Typ ist broken! Und gebt ihm keinen Gehstocktänzer!
 
                 _written by Henny_""").queue()).execute();
-        nom.increment("currentDay");
+        if (!prevDay)
+            nom.increment("currentDay");
         saveEmolgaJSON();
     }
 
